@@ -10,7 +10,8 @@
  * Gets some core libraries
  */
 require_once './libraries/common.inc.php';
-require_once './libraries/db_common.inc.php';
+$GLOBALS['js_include'][] = 'functions.js';
+require_once './libraries/header.inc.php';
 require_once './libraries/relation.lib.php';
 
 
